
5.2b1 -> 5.3a1
    - proyvind: js: fix internal build on Linux.
    - proyvind: filetriggers: fix missing file suffix for scripts. (from unity linux).
    - proyvind: rpm4compat: add wrappers for renamed rpmdb*->rpmmi* functions.
    - proyvind: python: add te.D() to return element distepoch.
    - jbj: blake: validate 224/256 reference blake against 8bit 0x00.
    - proyvind: python: handle None values in labelCompare() again.
    - proyvind: python: handle DISTEPOCH in labelCompare().
    - jbj: rpmdigest: add ECHO 224/256/384/512.
    - jbj: rpmdigest: add FUGUE 224/256/384/512.
    - jbj: rpmdigest: add SHAVITE3 224/256/384/512.
    - jbj: rpmdigest: add LANE 224/256/384/512.
    - jbj: rpmdigest: add HAMSI 224/256/384/512.
    - jbj: rpmdigest: add GROESTL 224/256/384/512.
    - jbj: rpmdigest: add JH 224/256/384/512.
    - jbj: rpmdigest: add CHI 224/256/384/512.
    - jbj: rpmdigest: add LUFFA 224/256/384/512.
    - jbj: rpmdigest: add ARIRANG 224/256/384/512 (all test vectors fail, todo++).
    - jbj: rpmdigest: add SIMD 224/256/384/512 (ShortMsgKAT_384.txt is nonsense).
    - jbj: rpmdigest: add TIB3 224/256/384/512.
    - jbj: rpmdigest: add Blake 224/256/384/512 (224/256 fail test vectors, todo++).
    - jbj: rpmdigest: add Shabal 224/256/384/512.
    - jbj: rpmdigest: add BlueMidnightWish 224/256/384/512.
    - jbj: keccak: optimizations for 32/64 bit merged.
    - jbj: md6: set rounds/parallel passes parameters from ctx->flags.
    - jbj: cubehash: set rounds/blockbytes parameters from ctx->flags.
    - jbj: cubehash: optimize with -msse2.
    - jbj: rpmdigest: use md6sum, not NIST, for MD6 test vectors.
    - jbj: rpmdigest: re-assign digest algo numbers, handle 224/256/384/512/1024
	parameters within the digest algo name.
    - jbj: rpmdigest: add md6 224/256/384/512 (tests failing atm, todo++).
    - jbj: rpmdigest: add cubehash 224/256/384/512.
    - jbj: rpmdigest: add keccak 224/256/384/512.
    - jbj: rpmdigest: add edon-r 224/256/384/512.